--- a/src/cncweld_core/CMakeLists.txt
+++ b/src/cncweld_core/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(roboweld_core)
+project(cncweld_core)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++11)
+add_compile_options(-std=c++14)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -65,9 +65,9 @@ find_package(PCL REQUIRED)
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-)
+# add_service_files(
+#  FILES
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
