--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "ros.distro": "melodic",
     "python.autoComplete.extraPaths": [
-        "/opt/ros/melodic/lib/python3/dist-packages"
+        "/opt/ros/melodic/lib/python2.7/dist-packages"
     ],
     "python.analysis.extraPaths": [
-        "/opt/ros/melodic/lib/python3/dist-packages"
+        "/opt/ros/melodic/lib/python2.7/dist-packages"
     ],
     "cmake.configureOnOpen": false
 }
