core using libserial, devel jsp

--- a/src/cncweld_core/CMakeLists.txt
+++ b/src/cncweld_core/CMakeLists.txt
@@ -104,7 +104,7 @@ add_library(
 ## Specify libraries to link a library or executable target against
 target_link_libraries(
   ${PROJECT_NAME}_node
-  SimpleSerial
+  serial
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
