--- a/src/serialwithgrbl/CMakeLists.txt
+++ b/src/serialwithgrbl/CMakeLists.txt
@@ -102,10 +102,11 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-  INCLUDE_DIRS include
+  INCLUDE_DIRS # include
   LIBRARIES serialwithgrbl
   CATKIN_DEPENDS libserial roscpp
-  DEPENDS system_lib
+  DEPENDS 
+  # system_lib
 )
 
 ###########
