grbl driver working slowly

--- a/src/grbl_driver/CMakeLists.txt
+++ b/src/grbl_driver/CMakeLists.txt
@@ -61,7 +61,7 @@ catkin_package(
   LIBRARIES
     grbl_driver
   CATKIN_DEPENDS
-    libserial
+#    libserial
     roscpp
 )
 
@@ -94,10 +94,10 @@ include_directories(
 #   ${PROJECT_NAME}_node 
 #   src/grbl_driver_node.cpp)
 
-# add_library(
-#   AsyncSerial
-#   src/AsyncSerial.cpp
-# )
+add_library(
+  AsyncSerial
+  src/AsyncSerial.cpp
+)
 
 add_executable(
   ${PROJECT_NAME}_node 
@@ -111,7 +111,8 @@ add_dependencies(
 
 target_link_libraries(
   ${PROJECT_NAME}_node
-  serial
+#   serial
+  AsyncSerial
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT}
