--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "argsort",
         "asarray",
         "CNCWELD",
+        "dbscan",
         "devel",
         "Flann",
         "GRBL",
