--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "Keyence",
         "linalg",
         "loginfo",
+        "nans",
         "neighbour",
         "neighbours",
         "roscloud"
