o3d ros helper and select down sample -> by index

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,8 +27,10 @@
         "neighbour",
         "neighbours",
         "roscloud",
+        "rospc",
         "rospy",
         "rviz",
-        "voxel"
+        "voxel",
+        "Zhou"
     ]
 }
