Added path generation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,14 +22,22 @@
         "GRBL",
         "Keyence",
         "linalg",
+        "linepts",
+        "linspace",
         "loginfo",
+        "mgrid",
         "nans",
         "neighbour",
         "neighbours",
+        "newaxis",
         "roscloud",
         "rospc",
         "rospy",
         "rviz",
+        "scipy",
+        "splev",
+        "splprep",
+        "thinckness",
         "voxel",
         "Zhou"
     ]
